--- a/.gitignore
+++ b/.gitignore
@@ -1,162 +1,133 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import json
+import re
+from datetime import datetime
 
-# C extensions
-*.so
+# Function to transform values based on type information
+def transform_value(value):
+    if 'S' in value:  # String type
+        val = value['S'].strip()
+        if not val:  # Omit empty strings
+            return None
+        # Check if it's a valid RFC3339 date format and convert to Unix Epoch
+        try:
+            return int(datetime.strptime(val, '%Y-%m-%dT%H:%M:%SZ').timestamp())
+        except ValueError:
+            return val  # Return as string if not a date
+    elif 'N' in value:  # Number type
+        val = value['N'].strip()
+        # Check for valid numeric value
+        try:
+            return int(val.lstrip("0")) if '.' not in val else float(val.lstrip("0"))
+        except ValueError:
+            return None
+    elif 'BOOL' in value:  # Boolean type
+        val = value['BOOL'].strip().lower()
+        if val in ['1', 't', 'true']:
+            return True
+        elif val in ['0', 'f', 'false']:
+            return False
+        else:
+            return None
+    elif 'NULL' in value:  # Null type
+        val = value['NULL'].strip().lower()
+        if val in ['1', 't', 'true']:
+            return None  # Return None for null
+        elif val in ['0', 'f', 'false']:
+            return None  # Omit
+        else:
+            return None
+    elif 'L' in value:  # List type
+        transformed_list = []
+        if isinstance(value['L'], list):
+            for item in value['L']:
+                transformed_item = transform_value(item)
+                if transformed_item is not None:
+                    transformed_list.append(transformed_item)
+        return transformed_list if transformed_list else None
+    elif 'M' in value:  # Map type
+        return transform_map(value['M'])
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Function to transform the map (dictionary)
+def transform_map(data):
+    transformed_data = {}
+    for key, value in data.items():
+        key = key.strip()  # Sanitize key
+        if not key:  # Skip empty keys
+            continue
+        transformed_value = transform_value(value)
+        if transformed_value is not None:  # Omit empty or invalid values
+            transformed_data[key] = transformed_value
+    return transformed_data if transformed_data else None
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Main function
+def json_transformer(input_data):
+    transformed_output = []
+    # Transform the top-level map
+    transformed_data = transform_map(input_data)
+    if transformed_data:
+        transformed_output.append(transformed_data)
+    return transformed_output
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Input JSON (as a string)
+input_json = '''
+{
+  "number_1": {
+    "N": "1.50"
+  },
+  "string_1": {
+    "S": "784498 "
+  },
+  "string_2": {
+    "S": "2014-07-16T20:55:46Z"
+  },
+  "map_1": {
+    "M": {
+      "bool_1": {
+        "BOOL": "truthy"
+      },
+      "null_1": {
+        "NULL ": "true"
+      },
+      "list_1": {
+        "L": [
+          {
+            "S": ""
+          },
+          {
+            "N": "011"
+          },
+          {
+            "N": "5215s"
+          },
+          {
+            "BOOL": "f"
+          },
+          {
+            "NULL": "0"
+          }
+        ]
+      }
+    }
+  },
+  "list_2": {
+    "L": "noop"
+  },
+  "list_3": {
+    "L": [
+      "noop"
+    ]
+  },
+  "": {
+    "S": "noop"
+  }
+}
+'''
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+# Parse input JSON
+input_data = json.loads(input_json)
 
-# Translations
-*.mo
-*.pot
+# Get the transformed output
+output = json_transformer(input_data)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# Print the transformed output to stdout
+print(json.dumps(output, indent=2))
